# python_employees_claude_cli

./: .gitignore  .mcp.json  README.md  pyproject.toml  requirements.txt  seed.py
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: departments.py  employees.py  fiscality.py  purchases.py  sales.py
tests/: conftest.py  test_integration.py  test_unit.py
